<resources>
    <string name="app_name">Wanderlust</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="new_trip">Start a new trip</string>
    <string name="old_trip">Relive old ones</string>
    <string name="or">OR</string>
    <string name="title_activity_new_trip">New Trip</string>
    <string name="title_activity_old_trips">Old Trips</string>
    <string name="name_your_trip">Name your trip</string>
    <string name="my_trip">My Trip</string>
    <string name="journey_start">Journey Start</string>
    <string name="journey_end">Journey End</string>
    <string name="interests">Interests</string>

    <string name="tag_outdoor_activities">Outdoor Activities</string>
    <string name="tag_nature_parks">Nature &amp; Parks</string>
    <string name="tag_sights_landmarks">Sights &amp; Landmarks</string>
    <string name="tag_shopping">Shopping</string>
    <string name="tag_tours">Tours</string>
    <string name="tag_nightlife">Nightlife</string>
    <string name="tag_fun_games">Fun &amp; Games</string>
    <string name="tag_boat_water_sports">Boat Tours &amp; Water Sports</string>
    <string name="tag_casinos_gambling">Casinos &amp; Gambling</string>
    <string name="tag_spas_wellness">Spas &amp; Wellness</string>
    <string name="tag_food_drink">Food &amp; Drink</string>
    <string name="tag_concerts_shows">Concerts &amp; Shows</string>
    <string name="tag_museums">Museums</string>
    <string name="tag_classes_workshops">Classes &amp; Workshops</string>
    <string name="tag_water_amusement">Water &amp; Amusement Parks</string>
    <string name="tag_traveller">Traveller Resources</string>
    <string name="tag_zoos_aquariums">Zoos &amp; Aquariums</string>
    <string name="tag_events">Events</string>

    <string name="lets_go">Lets Go!</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="description">Description</string>
    <string name="destination">Destination</string>
    <string name="eta">ETA</string>
    <string name="rating">Rating</string>
    <string name="time_spent">Time Spent</string>

</resources>
