<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.connectree.mobile.wanderlust.NewTripActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:paddingBottom="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_your_trip" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_trip"
            android:id="@+id/tripName_editText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journey_start"
            android:layout_marginTop="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/startDate_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="Sat 2 Apr, 2016"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/startTime_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="8:00 AM"
                android:textSize="20sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journey_end"
            android:layout_marginTop="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/endDate_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="Sat 4 Apr, 2016"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/endTime_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="8:00 AM"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interests"
            android:layout_marginTop="12dp"/>
        <CheckBox
            android:id="@+id/tag_boat_water_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_boat_water_sports"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_casinos_gambling"
            android:id="@+id/tag_casinos_gambling"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_classes_workshops"
            android:id="@+id/tag_classes_workshops"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_concerts_shows"
            android:id="@+id/tag_concerts_shows"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_events"
            android:id="@+id/tag_events"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_food_drink"
            android:id="@+id/tag_food_drink"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_fun_games"
            android:id="@+id/tag_fun_games"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_museums"
            android:id="@+id/tag_museums"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_nature_parks"
            android:id="@+id/tag_nature_parks"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_nightlife"
            android:id="@+id/tag_nightlife"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_outdoor_activities"
            android:id="@+id/tag_outdoor_activities"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_shopping"
            android:id="@+id/tag_shopping"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_sights_landmarks"
            android:id="@+id/tag_sights_landmarks"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_spas_wellness"
            android:id="@+id/tag_spas_wellness"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_tours"
            android:id="@+id/tag_tours"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_traveller"
            android:id="@+id/tag_traveller"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_water_amusement"
            android:id="@+id/tag_water_amusement"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_zoos_aquariums"
            android:id="@+id/tag_zoos_aquariums"/>
        <Button
            android:id="@+id/letsGo_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_go"
            android:background="@color/colorPrimary"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
</ScrollView>
