<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="0dp"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/news_card_background"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="?android:listPreferredItemHeight"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/eta"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/destination_textView"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                tools:text="Colva Beach"
                android:gravity="center"/>
            <TextView
                android:id="@+id/eta_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:text="05:00 PM"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/time_spent"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/rating_textView"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                tools:text="4"
                android:gravity="center"/>
            <TextView
                android:id="@+id/timeSent_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:text="45 mins"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="This is a sample desciption. Field can be set accordingly."/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>